--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,10 @@ ul {
     color: rgb(3, 33, 4);
 }
 
+li:hover {
+    background-color: rgb(247, 166, 14);
+}
+
 /* **************Tabla**************** */
 .tabla {
     width: 100px;
@@ -141,9 +145,16 @@ ul {
 
 .grid_gallery .img-box img {
     border-radius: 10px;
+    opacity: 0.7;
 }
 
-.imagen{
+/* *************Animaciones***************** */
+.grid_gallery .img-box img:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+.imagen {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -162,7 +173,7 @@ ul {
 @media screen and (max-width:768px) {
     .grid_gallery {
         grid-template-columns: repeat(2, 1fr);
-        
+
     }
 
 
@@ -191,7 +202,8 @@ ul {
     p {
         font-size: 20px;
     }
-    .imagen{
+
+    .imagen {
         width: 95%;
         height: 95%;
     }
@@ -213,7 +225,7 @@ ul {
         gap: 70px;
     }
 
-    .imagen{
+    .imagen {
         width: 90%;
         height: 90%;
     }
