--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,13 +1,43 @@
+* {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box; }
+
 body {
-  background-color: #f55; }
+  background-color: beige;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
-h1 {
-  font-family: "georgia"; }
+.navbar {
+  font-size: 35px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  position: absolute;
+  z-index: 10;
+  width: 100%; }
+  .navbar .navbar-nav {
+    gap: 10px;
+    padding-right: 50px;
+    padding-top: 50px; }
+    .navbar .navbar-nav .nav-link {
+      color: white;
+      text-shadow: 2px 2px #010102; }
+    .navbar .navbar-nav .nav-link:hover {
+      color: green;
+      transition: all 1s ease 0s; }
 
-ul {
-  list-style: none; }
-  ul li {
-    background-color: cyan; }
-    ul li a {
-      text-decoration: none;
-      color: #00fa5c; }
+.footerbs {
+  background-color: #141452; }
+
+/********************* Fondo ***********************/
+.main {
+  position: relative;
+  background: url(../img/Fondo.png);
+  background-size: cover;
+  background-position: center;
+  min-height: 50vh;
+  margin-bottom: 100px;
+  border-radius: 30px; }
+
+/**************Media Queris *********************/
+@media only screen and (max-width: 1200px) {
+  .navbar {
+    font-size: 25px; } }
