--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -35,7 +35,7 @@ h4{
         gap: 10px;
         padding-right: 50px;
         padding-top: 50px;
-
+        // **************************AGREGANDO SELECTOR &**********************************
         .nav-link {
             color: rgb(255, 255, 255);
             text-shadow: 2px 2px rgb(1, 1, 2);
