--- a/scss/estilo.css
+++ b/scss/estilo.css
@@ -65,11 +65,18 @@ body {
 
 h1 {
   font-family: "octin", sans-serif;
-  color: rgb(5, 76, 5);
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  text-shadow: 2px 2px rgb(1, 1, 2);
+  padding-bottom: 50px;
 }
 
 h2 {
   font-family: "rg", sans-serif;
+  color: rgb(9, 53, 9);
+  font-size: 35px;
+  text-align: center;
 }
 
 h4 {
@@ -102,6 +109,26 @@ h4 {
   min-height: 50vh;
   margin-bottom: 100px;
   border-radius: 30px;
+}
+
+.grida {
+  border-radius: 20px;
+  opacity: 0.7;
+}
+
+.grida:hover {
+  transform: scale(1.1);
+  opacity: 1;
+}
+
+.gridimg {
+  border-radius: 10px;
+}
+
+/************** Mapa ******************/
+.iframe {
+  display: flex;
+  justify-content: center;
 }
 
 /**************Media Queris *********************/
