--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,14 +1,13 @@
 // Aplicando Mixin
 
 @mixin menu {
-    font-size: 35px;
+    font-size: 30px;
     font-family: $fonth1;
     position: absolute;
     z-index: 10;
     width: 100%;
     }
 
-    
     .navbar{
         @include menu;
     }
@@ -28,6 +27,11 @@
     
         }
     
+.header{
+            position: absolute;
+            z-index: 10;
+            width: 100%;
+        } 
 
 
 
