--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -146,4 +146,46 @@ h5{
     .navbar{
         font-size: 25px;
     }
+
+    .h9{
+        font-size: x-small;
+    }
+    .text{
+        font-size: small;
+    }
+    .iframe{
+    display: flex;
+    flex-direction: column;
+    }
 }
+@media only screen and (max-width: 1024px) {
+
+    .containernos{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
+@media only screen and (max-width: 768px) {
+
+    .navbar-brand{
+        width: 200px;
+    }
+
+    .navbar-nav{
+        font-size: small;
+    }
+
+}
+
+@media only screen and (max-width:480px) {
+
+    h1{
+        font-size:xx-large;
+    }
+    
+}
+
+
+
