Agregando ultimos cambios

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -16,6 +16,28 @@ body{
     
 }
 
+.imglogo{
+    filter: drop-shadow(5px 5px 10px #000);
+}
+
+
+
+.col{
+    animation: cartas 3s ease 0s 1 normal forwards;
+}
+
+@keyframes cartas {
+	0% {
+		opacity: 0;
+		transform: translateX(-50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
 // Estilo de texto
 
 h1{
@@ -25,7 +47,21 @@ h1{
     color: rgb(6, 128, 30);
         text-shadow: 2px 2px rgb(1, 1, 2);
         padding-bottom: 50px;
-}
+        animation: h1a 1s ease 0s 1 normal forwards;
+    }
+    
+    @keyframes h1a {
+        0% {
+            opacity: 0;
+            transform: translateX(-250px);
+        }
+    
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
 
 h2{
     font-family: $fonth2;
@@ -41,6 +77,7 @@ h4{
 h5{
     font-family: $fonth2;
     text-align: center;
+    
 }
 
 .cardtext{
@@ -50,10 +87,29 @@ h5{
 
 .text{
     color: rgb(255, 255, 255);
-    text-shadow: 2px 2px rgb(1, 1, 2);
-    font-size: 20px;
+    text-shadow: 2px 2px 2px rgb(1, 1, 1);
+    font-size: 25px;
     padding-left: 20px;
+    animation: texto 3s ease 0s 1 normal forwards;
 }
+@keyframes texto {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
+.copyr{
+    color: white;
+    font-size: 13px;
+    margin-top: 5px;
+
+}
+
+
 
 // Seccion Nosotros
 
@@ -65,7 +121,67 @@ h5{
 
 .nosimg{
     border-radius: 10px;
+    box-shadow: -7px 5px 20px 1px #000;
+    animation: nosimg 2s ease 0s 1 normal forwards;
 }
+
+@keyframes nosimg {
+	0% {
+		transform: scale(0);
+		transform-origin: 0% 50%;
+	}
+
+	100% {
+		transform: scale(1);
+		transform-origin: 0% 50%;
+	}
+}
+
+// Seccion Contacto
+
+
+.redescon{
+    display: flex;
+    justify-content:center;
+    gap: 5rem;
+    padding-top: 70px;
+    animation: redesicon 3s ease 0s 1 normal forwards;    
+}
+
+@keyframes redesicon {
+    0% {
+        opacity: 0;
+        transform: translateX(-250px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.fa-brands{
+    color: green;
+    font-size: 60px;
+    text-shadow: 1px 1px 1px rgb(1, 1, 2);
+    &:hover {
+        color: rgb(247, 247, 247);
+        transition: all 1s ease 0s;}
+}
+
+.nuestras{
+    font-family: 'octin';
+    font-size: 30px;
+    color: rgb(6, 128, 30);
+    text-shadow: 2px 2px rgb(1, 1, 2);
+}
+
+.envio{
+    color: aqua ;
+}
+
+
+
 
 /********************* Fondo ***********************/
 
@@ -76,36 +192,17 @@ h5{
     background-position: center;
     min-height: 50vh;
     margin-bottom: 100px;
+    filter: drop-shadow(-3px -10px 40px #000);
     }
 
 
-// Banner Separador
 
-    .custom-shape-divider-bottom-1663027264 {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        overflow: hidden;
-        line-height: 0;
-        transform: rotate(180deg);
-    }
-    
-    .custom-shape-divider-bottom-1663027264 svg {
-        position: relative;
-        display: block;
-        width: calc(114% + 1.3px);
-        height: 61px;
-    }
-    
-    .custom-shape-divider-bottom-1663027264 .shape-fill {
-        fill: beige;
-    }
 
 // Carrusel
 
     .carousel-inner{
         border-radius: 20px;
+        filter: drop-shadow(5px 5px 5px #000);
     }
 
     // Grid
@@ -113,6 +210,7 @@ h5{
     .grida{
         border-radius: 20px;
         opacity: 0.7;
+        filter: drop-shadow(1px 1px 5px #000);
     }
     .grida:hover{
         transform: scale(1.1);
@@ -124,19 +222,73 @@ h5{
         border-radius: 10px;
     }
 
-/************** Mapa ******************/
-.iframe {
-    display: flex;
-    justify-content: center;
-}
+/************** Mapa / Ubicacion******************/
+
+
 
 .mapa{
     margin-top: 100px;
-    padding: 10px;
+    
 }
 
 .localizacionimg{
     border-radius: 10px;
+    box-shadow: -7px 5px 20px 1px #000;
+    animation: myAnim 2s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.datubi{
+    display: flex;
+    padding-left: 1200px;
+   font-family: 'octin';
+   color: green;
+   text-shadow: 1px 1px rgb(1, 1, 1);
+   font-size: 22px;
+}
+
+.cartitas{
+    filter: drop-shadow(1px 1px 5px #000);
+
+}
+
+.imgloca1{
+    margin-right: 200px;
+    margin-bottom: 200px;
+   
+
+}
+
+.imgloca2{
+margin-top: 50px;
+
+}
+
+.direubi{
+    font-size: 25px;
+    font-family: 'octin';
+}
+
+.fa-location-pin{
+    font-size: 30px;
+    color: rgba(0, 128, 0, 0.699);
+    text-shadow: 1px 1px rgb(1, 1, 1);
+
+}
+
+.direccion{
+  margin-top: 100px;
 }
 
 
@@ -146,45 +298,86 @@ h5{
     .navbar{
         font-size: 25px;
     }
+    
 
     .h9{
         font-size: x-small;
     }
-    .text{
-        font-size: small;
+
+    .text {
+        font-size:medium;
+
     }
+
     .iframe{
-    display: flex;
-    flex-direction: column;
+        display: flex;
+        flex-direction: column;
+
+    }
+    .imgloca1{
+        margin-right: 0px;
+        margin-bottom: 0px;
     }
 }
+
 @media only screen and (max-width: 1024px) {
 
     .containernos{
         display: flex;
         flex-direction: column;
     }
+    .navbar-brand{
+        width: 250px;
+    }
+    .navbar-nav{
+        
+        gap: 5px;
+        padding-top: 3px;
+    }
+    .text {
+        padding-top: 20px;
+    }
+
+
+   
     
 }
+
+
+
 
 @media only screen and (max-width: 768px) {
+  
+   
 
-    .navbar-brand{
-        width: 200px;
+
+    .fa-brands{
+        font-size: 40px;
     }
-
-    .navbar-nav{
-        font-size: small;
-    }
-
-}
-
-@media only screen and (max-width:480px) {
+  
 
     h1{
-        font-size:xx-large;
+        font-size: 40px;
     }
-    
+}
+
+@media only screen and (max-width: 480px) {
+
+    .nuestras{
+        display: none;
+    }
+   
+
+    span{
+        font-size:x-small;
+    }
+    .iconos{
+        gap: 2rem;
+    }
+    .navbar{
+        font-size: 20px;
+    }
+
 }
 
 
