--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,125 +1,313 @@
-.fa-facebook, .fa-whatsapp, .fa-instagram {
-  color: white; }
+.fa-facebook, .fa-instagram, .fa-whatsapp {
+  color: white;
+}
 
 .fa-instagram {
-  color: white(154, 33, 53); }
+  color: white(154, 33, 53);
+}
 
 .fa-whatsapp {
-  color: white; }
+  color: white;
+}
 
 .h3 {
   color: white;
-  font-family: 'octin';
-  text-shadow: 2px 2px #010102; }
+  font-family: "octin";
+  text-shadow: 2px 2px rgb(1, 1, 2);
+}
 
-.fa-facebook, .fa-whatsapp, .fa-instagram {
+.fa-facebook, .fa-instagram, .fa-whatsapp {
   font-size: 30px;
-  text-shadow: 2px 2px #010102; }
-  .fa-facebook:hover, .fa-whatsapp:hover, .fa-instagram:hover {
-    color: green;
-    transition: all 1s ease 0s; }
+  text-shadow: 2px 2px rgb(1, 1, 2);
+}
+.fa-facebook:hover, .fa-instagram:hover, .fa-whatsapp:hover {
+  color: green;
+  transition: all 1s ease 0s;
+}
 
 .h9 {
-  font-size: small; }
+  font-size: small;
+}
 
 .h6 {
   font-weight: bolder;
-  text-shadow: 2px 2px #010102; }
+  text-shadow: 2px 2px rgb(1, 1, 2);
+}
 
 .iconos {
   display: flex;
   justify-content: center;
   gap: 5rem;
-  padding-bottom: 30px; }
+  padding-bottom: 10px;
+}
 
 .logofoot {
-  padding-bottom: 40px; }
+  padding-bottom: 40px;
+}
 
 .footerbs {
-  background-color: #141452; }
+  background-color: rgb(20, 20, 82);
+  filter: drop-shadow(-3px -10px 40px #000);
+}
+
+.foot4 {
+  margin-top: 12px;
+}
+
+.foot2 {
+  margin-top: 12px;
+}
 
 @font-face {
   font-family: "octin";
-  src: url("../font/Octin College Bold.ttf"); }
-
+  src: url("../font/Octin College Bold.ttf");
+}
 @font-face {
   font-family: "rg";
-  src: url("../font/octin college rg.otf"); }
-
+  src: url("../font/octin college rg.otf");
+}
 @font-face {
   font-family: "sans";
-  src: url("../font/OpenSans-Medium.ttf"); }
-
+  src: url("../font/OpenSans-Medium.ttf");
+}
 .navbar {
   font-size: 30px;
   font-family: "octin", sans-serif;
   position: absolute;
   z-index: 10;
-  width: 100%; }
+  width: 100%;
+}
 
 .navbar-nav {
-  gap: 10px;
+  gap: 50px;
   padding-right: 50px;
-  padding-top: 50px; }
-  .navbar-nav .nav-link {
-    color: white;
-    text-shadow: 2px 2px #010102; }
-    .navbar-nav .nav-link:hover {
-      color: green;
-      transition: all 1s ease 0s; }
+  padding-top: 50px;
+}
+.navbar-nav .nav-link {
+  color: rgb(255, 255, 255);
+  text-shadow: 3px 3px 2px rgb(1, 1, 2);
+}
+.navbar-nav .nav-link:hover {
+  color: green;
+  transition: all 1s ease 0s;
+}
 
 .header {
   position: absolute;
   z-index: 10;
-  width: 100%; }
+  width: 100%;
+}
 
 * {
   padding: 0%;
   margin: 0%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   background-color: beige;
-  font-family: "sans", sans-serif; }
+  font-family: "sans", sans-serif;
+}
 
+.imglogo {
+  filter: drop-shadow(5px 5px 10px #000);
+}
+
+.col {
+  -webkit-animation: cartas 3s ease 0s 1 normal forwards;
+          animation: cartas 3s ease 0s 1 normal forwards;
+}
+
+@-webkit-keyframes cartas {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes cartas {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 h1 {
   font-family: "octin", sans-serif;
   font-size: 50px;
   text-align: center;
-  color: #06801e;
-  text-shadow: 2px 2px #010102;
-  padding-bottom: 50px; }
+  color: rgb(6, 128, 30);
+  text-shadow: 2px 2px rgb(1, 1, 2);
+  padding-bottom: 50px;
+  -webkit-animation: h1a 1s ease 0s 1 normal forwards;
+          animation: h1a 1s ease 0s 1 normal forwards;
+}
 
+@-webkit-keyframes h1a {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes h1a {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 h2 {
   font-family: "rg", sans-serif;
-  color: #093509;
+  color: rgb(9, 53, 9);
   font-size: 35px;
-  text-align: center; }
+  text-align: center;
+}
 
 h4 {
-  font-family: "sans", sans-serif; }
+  font-family: "sans", sans-serif;
+}
 
 h5 {
   font-family: "rg", sans-serif;
-  text-align: center; }
+  text-align: center;
+}
 
 .cardtext {
   font-size: small;
-  text-align: center; }
+  text-align: center;
+}
 
 .text {
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px 2px rgb(1, 1, 1);
+  font-size: 25px;
+  padding-left: 20px;
+  -webkit-animation: texto 3s ease 0s 1 normal forwards;
+          animation: texto 3s ease 0s 1 normal forwards;
+}
+
+@-webkit-keyframes texto {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes texto {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.copyr {
   color: white;
-  text-shadow: 2px 2px #010102;
-  font-size: 20px;
-  padding-left: 20px; }
+  font-size: 13px;
+  margin-top: 5px;
+}
 
 .containernos {
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .nosimg {
-  border-radius: 10px; }
+  border-radius: 10px;
+  box-shadow: -7px 5px 20px 1px #000;
+  -webkit-animation: nosimg 2s ease 0s 1 normal forwards;
+          animation: nosimg 2s ease 0s 1 normal forwards;
+}
+
+@-webkit-keyframes nosimg {
+  0% {
+    transform: scale(0);
+    transform-origin: 0% 50%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 0% 50%;
+  }
+}
+
+@keyframes nosimg {
+  0% {
+    transform: scale(0);
+    transform-origin: 0% 50%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 0% 50%;
+  }
+}
+.redescon {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  padding-top: 70px;
+  -webkit-animation: redesicon 3s ease 0s 1 normal forwards;
+          animation: redesicon 3s ease 0s 1 normal forwards;
+}
+
+@-webkit-keyframes redesicon {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes redesicon {
+  0% {
+    opacity: 0;
+    transform: translateX(-250px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.fa-brands {
+  color: green;
+  font-size: 60px;
+  text-shadow: 1px 1px 1px rgb(1, 1, 2);
+}
+.fa-brands:hover {
+  color: rgb(247, 247, 247);
+  transition: all 1s ease 0s;
+}
+
+.nuestras {
+  font-family: "octin";
+  font-size: 30px;
+  color: rgb(6, 128, 30);
+  text-shadow: 2px 2px rgb(1, 1, 2);
+}
+
+.envio {
+  color: aqua;
+}
 
 /********************* Fondo ***********************/
 .main {
@@ -128,76 +316,156 @@ h5 {
   background-size: cover;
   background-position: center;
   min-height: 50vh;
-  margin-bottom: 100px; }
-
-.custom-shape-divider-bottom-1663027264 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg); }
-
-.custom-shape-divider-bottom-1663027264 svg {
-  position: relative;
-  display: block;
-  width: calc(114% + 1.3px);
-  height: 61px; }
-
-.custom-shape-divider-bottom-1663027264 .shape-fill {
-  fill: beige; }
+  margin-bottom: 100px;
+  filter: drop-shadow(-3px -10px 40px #000);
+}
 
 .carousel-inner {
-  border-radius: 20px; }
+  border-radius: 20px;
+  filter: drop-shadow(5px 5px 5px #000);
+}
 
 .grida {
   border-radius: 20px;
-  opacity: 0.7; }
+  opacity: 0.7;
+  filter: drop-shadow(1px 1px 5px #000);
+}
 
 .grida:hover {
   transform: scale(1.1);
   opacity: 1;
-  transition: all 1.5s ease 0s; }
+  transition: all 1.5s ease 0s;
+}
 
 .gridimg {
-  border-radius: 10px; }
+  border-radius: 10px;
+}
 
-/************** Mapa ******************/
-.iframe {
-  display: flex;
-  justify-content: center; }
-
+/************** Mapa / Ubicacion******************/
 .mapa {
   margin-top: 100px;
-  padding: 10px; }
+}
 
 .localizacionimg {
-  border-radius: 10px; }
+  border-radius: 10px;
+  box-shadow: -7px 5px 20px 1px #000;
+  -webkit-animation: myAnim 2s ease 0s 1 normal forwards;
+          animation: myAnim 2s ease 0s 1 normal forwards;
+}
+
+@-webkit-keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes myAnim {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.datubi {
+  display: flex;
+  padding-left: 1200px;
+  font-family: "octin";
+  color: green;
+  text-shadow: 1px 1px rgb(1, 1, 1);
+  font-size: 22px;
+}
+
+.cartitas {
+  filter: drop-shadow(1px 1px 5px #000);
+}
+
+.imgloca1 {
+  margin-right: 200px;
+  margin-bottom: 200px;
+}
+
+.imgloca2 {
+  margin-top: 50px;
+}
+
+.direubi {
+  font-size: 25px;
+  font-family: "octin";
+}
+
+.fa-location-pin {
+  font-size: 30px;
+  color: rgba(0, 128, 0, 0.699);
+  text-shadow: 1px 1px rgb(1, 1, 1);
+}
+
+.direccion {
+  margin-top: 100px;
+}
 
 /**************Media Queris *********************/
 @media only screen and (max-width: 1200px) {
   .navbar {
-    font-size: 25px; }
+    font-size: 25px;
+  }
   .h9 {
-    font-size: x-small; }
+    font-size: x-small;
+  }
   .text {
-    font-size: small; }
+    font-size: medium;
+  }
   .iframe {
     display: flex;
-    flex-direction: column; } }
-
+    flex-direction: column;
+  }
+  .imgloca1 {
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .containernos {
     display: flex;
-    flex-direction: column; } }
-
-@media only screen and (max-width: 768px) {
+    flex-direction: column;
+  }
   .navbar-brand {
-    width: 200px; }
+    width: 250px;
+  }
   .navbar-nav {
-    font-size: small; } }
-
-@media only screen and (max-width: 480px) {
+    gap: 5px;
+    padding-top: 3px;
+  }
+  .text {
+    padding-top: 20px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .fa-brands {
+    font-size: 40px;
+  }
   h1 {
-    font-size: xx-large; } }
+    font-size: 40px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .nuestras {
+    display: none;
+  }
+  span {
+    font-size: x-small;
+  }
+  .iconos {
+    gap: 2rem;
+  }
+  .navbar {
+    font-size: 20px;
+  }
+}/*# sourceMappingURL=estilo.css.map */
